--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["ipykernel>=6.30.1", "ruff>=0.13.3"]
+dev = [
+    "hypothesis>=6.142.1",
+    "networkx>=3.5",
+    "pytest>=8.4.2",
+    "ruff>=0.13.3",
+]
 
 
 [tool.ruff]
@@ -56,8 +61,11 @@ ignore = [
     # Generic parameters
     "UP046",
     # Docstring related
-    "D104",
     "D100",
+    "D102",
+    "D104",
+    "D105",
+    "D107"
 ]
 
 [tool.ruff.lint.flake8-annotations]
