--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,14 @@ authors = [
 
 requires-python = ">=3.12"
 dependencies = [
+    "basedpyright>=1.36.2",
     "fastapi>=0.118.0",
     "langchain>=0.3.27",
     "langchain-community>=0.3.30",
     "langchain-ollama>=0.3.10",
     "langgraph>=0.6.8",
     "pydantic-settings>=2.11.0",
+    "seriacade[pydantic]",
     "sqlalchemy>=2.0.43",
 ]
 
@@ -27,6 +29,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "basedpyright>=1.36.2",
     "hypothesis>=6.142.1",
     "networkx>=3.5",
     "pytest>=8.4.2",
@@ -65,7 +68,9 @@ ignore = [
     "D102",
     "D104",
     "D105",
-    "D107"
+    "D107",
+    "TD002",
+    "TD003"
 ]
 
 [tool.ruff.lint.flake8-annotations]
@@ -76,3 +81,7 @@ max-doc-length = 120
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+[tool.uv.sources]
+seriacade = { git = "https://github.com/tallen12/seriacade" }
+
