--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,12 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "basedpyright>=1.36.2",
-    "hypothesis>=6.142.1",
+    "hypothesis>=6.148.9",
     "networkx>=3.5",
+    "pyhamcrest>=2.1.0",
     "pytest>=8.4.2",
+    "pytest-lazy-fixtures>=1.4.0",
+    "pytest-mock>=3.15.1",
     "ruff>=0.13.3",
 ]
 
@@ -84,4 +87,8 @@ convention = "google"
 
 [tool.uv.sources]
 seriacade = { git = "https://github.com/tallen12/seriacade" }
+
+[tool.ruff.per-file-ignores]
+# Ignore all directories named `tests`.
+"tests/**" = ["D"]
 
