Fix ruff command

--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -21,7 +21,7 @@ jobs:
         run: uv run basedpyright
 
       - name: Lint
-        run: uv run ruff
+        run: uv run ruff check
 
       - name: Unit tests
         run: uv run pytest tests/unit
