--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -21,7 +21,7 @@ jobs:
         run: uv run basedpyright
 
       - name: Lint
-        run: uv run ruff check
+        run: uv run ruff check --ignore=FIX
 
       - name: Unit tests
         run: uv run pytest tests/unit
