update job name

--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -3,7 +3,7 @@ run-name:  Running automated tests and linting by ${{ github.actor }}
 on: [push, pull_request]
 jobs:
   test:
-    name: tests
+    name: Automated Tests
     runs-on: ubuntu-latest
 
     steps:
