Work in progress (#1)
* Updated dependencies to use seriacade and enforce type checkign using basedpyright

* Refactor pipeline types

* Refactor types to use agent graph vs pipeline incidently cleaned up some type issues

* Refactor module names and improve documentation

- Renamed `LangGraphPipeline` to `LangchainGraph` to better reflect its purpose.
- Updated docstrings throughout the files to use more accurate terminology (e.g., "graph" instead of "pipeline").
- Adjusted type annotations and imports accordingly.

* Refactor agentic code into separate module

* add __init__.py

* remove temp __init__.py

* Refactor imports and add type annotations in langchain backend modules

* docs: Add detailed docstrings expriementing with AI agents

* fix circular deps in the graph protocols

* Add tests for backend implementations of the graph protocol

* refactor tests to be more correct for using parameterized tests in the backend

* Improvements for updates on the graph impl abstraction

Added ChangeSet to explicitly manage updates relating to langchain reducer.

* Add tests for change set, and fix tests for graph backends to use changeset for reduce

* Add github actions

* Fix ruff command

* Fixes to get ruff passing

* more fixes

* rename github action

* update job name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,14 @@ authors = [
 
 requires-python = ">=3.12"
 dependencies = [
+    "basedpyright>=1.36.2",
     "fastapi>=0.118.0",
     "langchain>=0.3.27",
     "langchain-community>=0.3.30",
     "langchain-ollama>=0.3.10",
     "langgraph>=0.6.8",
     "pydantic-settings>=2.11.0",
+    "seriacade[pydantic]",
     "sqlalchemy>=2.0.43",
 ]
 
@@ -27,9 +29,13 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
-    "hypothesis>=6.142.1",
+    "basedpyright>=1.36.2",
+    "hypothesis>=6.148.9",
     "networkx>=3.5",
+    "pyhamcrest>=2.1.0",
     "pytest>=8.4.2",
+    "pytest-lazy-fixtures>=1.4.0",
+    "pytest-mock>=3.15.1",
     "ruff>=0.13.3",
 ]
 
@@ -65,7 +71,9 @@ ignore = [
     "D102",
     "D104",
     "D105",
-    "D107"
+    "D107",
+    "TD002",
+    "TD003"
 ]
 
 [tool.ruff.lint.flake8-annotations]
@@ -76,3 +84,11 @@ max-doc-length = 120
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+[tool.uv.sources]
+seriacade = { git = "https://github.com/tallen12/seriacade" }
+
+[tool.ruff.per-file-ignores]
+# Ignore all directories named `tests`.
+"tests/**" = ["D"]
+
