--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dev = [
     "networkx>=3.5",
     "pyhamcrest>=2.1.0",
     "pytest>=8.4.2",
+    "pytest-asyncio>=1.3.0",
     "pytest-lazy-fixtures>=1.4.0",
     "pytest-mock>=3.15.1",
     "ruff>=0.13.3",
